<resources>
    <string name="app_name">TP-1</string>
    <string name="title_activity_result">result</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_calcul_result">calcul_result</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vente_de_marchandise">Vente de marchandise</string>
    <string name="location_d_habitiation_meublee">Location d\'habitiation meublée</string>
    <string name="profession_liberale">Profession libérale</string>
    <string name="location_d_habitation_meublee_de_tourisme">Location d\'habitation meublée de tourisme</string>
    <string name="prestation_de_service">Prestation de service</string>
    <string name="type_d_activite">Type d\'activité :</string>
    <string name="chiffre_d_affaire_en_euros">Chiffre d\'affaire (en euros) :</string>
    <string name="ex_210000">ex : 210000</string>
    <string name="valider">Valider</string>
    <string name="calcul_type_d_activite">Type d\'activité :</string>
    <string name="calcul_chiffre_d_affaire">Chiffre d\'affaire :</string>
    <string name="calcul_cotisations">Cotisations :</string>
    <string name="calcul_benefice">Bénéfice :</string>
    <string name="_0_exemple">0</string>
    <string name="aucun">/</string>
    <string name="euros">euros</string>
</resources>